(fix) Shift css of image to be more center, bring down message details title

--- a/dev/css/style.css
+++ b/dev/css/style.css
@@ -261,7 +261,7 @@
 
 .message-detail-image {
   display: block;
-  margin-left: -7.5%;
+  margin-left: -15%;
 }
 
 /*.message-detail-header {
